--- a/View/Clicker.xaml
+++ b/View/Clicker.xaml
@@ -7,6 +7,14 @@
         mc:Ignorable="d"
         Title="Clicker" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Countdown Timer: " FontSize="16"/>
+            <TextBlock Text="{Binding Seconds}" FontSize="16"/>
+            <TextBlock Text="Clicks: " FontSize="16"/>
+            <TextBlock Text="{Binding Clicks}" FontSize="16"/>
+            <TextBlock Text="Clicks Per Minute: " FontSize="16"/>
+            <TextBlock Text="{Binding ClicksPerMinute}" FontSize="16"/>
+            <Button Content="Click" Command="{Binding ClickCommand}" FontSize="16" Margin="10" IsEnabled="{Binding ClickCommandEnabled}"/>
+        </StackPanel>
     </Grid>
 </Window>
